# Forest-Cover-Type-Prediction

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: code check.yml
src/my_project/: boosting.py  data.py  neural_network.py  preprocess.py  tune.py  voting.py
tests/: integration_test.py  unit_test.py
tests/fixtures/: fixture.csv
