[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["AnastasiiaSt <anastasiiastv@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
pandas-profiling = "^3.2.0"
tensorflow = "^2.8.0"
click = "^8.1.3"
scikit-learn = "^1.1.0"
pywin32 = "^304"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = "src.my_project.data:profile_report"
tune = "src.my_project.tune:tune"
train_nn = "src.my_project.neural_network:train_n_n"
voting = "src.my_project.voting:voting"
boosting = "src.my_project.boosting:boosting"
